<resources>
    <string name="app_name">Qualifeed</string>
    <string name="login">Login</string>
    <string name="enter_email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_wait">Please wait...</string>
    <string name="network_failure">Sorry! Not connected to internet</string>
    <string name="wrong_email">Can\'t enter worng email.</string>
    <string name="to_do_list">To Do List</string>
    <string name="start_inspection">Start Control</string>
    <string name="lainning_and_check_point">Trainning</string>
    <string name="inspection">Control Tools Check</string>
    <string name="control_by_piece">Control by piece</string>
    <string name="control_by_box">Control by box</string>
    <string name="control_by_load_shipment">Control by load/shipment</string>
    <string name="required">Required</string>
    <string name="quality_control_starting">Quality <br>Control</br> <br>Starting</br></string>
    <string name="quality_control_starting1">Quality Control Starting</string>

    <string name="logout">logout</string>
    <string name="are_you_sure_you_want_to_logout_this_app">Are you sure you want to logout this app?</string>
    <string name="are_you_sure_you_want_to_exit_this_app">Are you sure you want to exit this app?</string>
    <string name="list_details">List details</string>
    <string name="send">Send</string>
    <string name="take_photo">Take Photo</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="share">share</string>
    <string name="save">save</string>
    <string name="select_image_from">Select image from</string>
    <string name="camera">Camera</string>
    <string name="defact_add_successfully">Defact add successfully.</string>
    <string name="please_select_defact">Please select defact</string>
    <string name="scrap">Scrap</string>
    <string name="add_comment">Add comment</string>
    <string name="add_scrap">Add Scrap</string>
    <string name="scrap_add_successfully">Scrap add successfully</string>
    <string name="please_add_comment">Please add comment</string>
    <string name="please_add_photo">Please add photo</string>
    <string name="upload_photo">Upload photo</string>
    <string name="repair">Repair</string>
    <string name="start">Start</string>
    <string name="are_you_sure_you_want_to_save_this_defact">Are you sure you want to save this defact?</string>
    <string name="username">Username</string>
    <string name="done">Done</string>
    <string name="training">Training</string>
    <string name="control_tools">Control Tools Check</string>
    <string name="qr_code">QR code</string>
    <string name="product_type">"Product Type "</string>
    <string name="block">Block</string>
    <string name="next_page">Next Product</string>
    <string name="suspect_defect">suspect defect</string>
    <string name="defect_list">Defects list</string>
    <string name="defect_add_successfully">Defect added successfully</string>
    <string name="do_you_wanna_end_session">Do you wanna End the control session</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="something_went_wrong">Something want to wrong</string>
    <string name="timer">Timer</string>
    <string name="scan_next_qr_code">Scan next Qr code</string>
    <string name="add_task">Add Task</string>
    <string name="please_add_task">Please add task</string>
    <string name="task_not_available">task not available</string>
    <string name="product_selection">Product Selection</string>
    <string name="select_the_product">Select the product</string>
    <string name="data_not_available">data not available</string>
    <string name="invalid_qr_code">invalid qr code</string>
    <string name="title">Title</string>
    <string name="please_add_title">Please add title</string>
    <string name="defect_not_available">defect not available</string>


</resources>