<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp">

        <LinearLayout
            android:id="@+id/layoutType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_5sdp"
            android:gravity="center">


            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_settings" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/product_type"
                android:textColor="@color/black_light"
                android:textSize="@dimen/_9sdp" />



        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/defect_list"
            android:textColor="@color/black_light"
            android:textSize="@dimen/_16sdp" />


        <ImageView
            android:id="@+id/ivCross"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/_15sdp"
            android:src="@drawable/ic_cross" />


    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/layoutMain"
        android:layout_below="@+id/layoutHeader"
        android:layout_above="@+id/tabBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDefect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_defact_main" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSusDefect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suspect_defect"
                android:textColor="@color/white"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/_15sdp"
                android:background="@color/black_light"/>


    </RelativeLayout>



      <TextView
          android:id="@+id/tvNotFound"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:text="@string/defect_not_available"
          android:textColor="@color/black"
          android:textSize="@dimen/_12sdp"
          android:fontFamily="@font/poppins_regular"
          android:visibility="gone"/>



    <LinearLayout
        android:id="@+id/tabBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/layoutBlock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_block"/>


            <TextView
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/block"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"/>




        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutRepair"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_repair"/>


            <TextView
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repair"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"/>




        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutNext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_next"/>


            <TextView
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_page"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"/>




        </LinearLayout>


    </LinearLayout>

</RelativeLayout>

</layout>