<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="#C0CCDA">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_25sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/training"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />


        </RelativeLayout>




        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/layoutHeader"
            android:id="@+id/rvTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_training" />



            <TextView
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:background="@color/green"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:layout_margin="@dimen/_20sdp"
                />



        <TextView
            android:id="@+id/tvNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_not_available"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:visibility="gone"
            />


    </RelativeLayout>

</layout>
