<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:background="@drawable/rounded_black_200bg">



                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/back"
                    android:tint="@color/white"
                    android:padding="@dimen/_7sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_15sdp"
                    tools:ignore="UseAppTint" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/forgot_password1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    />



            </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:padding="@dimen/_12sdp"
            android:text="Please enter your your registred mail address to get a new password link."
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_14sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            />





                <EditText
                    android:id="@+id/edMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"/>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_5sdp">

            <RelativeLayout
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark_gray">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_horizontal"
                    android:hint="@string/password"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/send"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"

                    />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>