<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/repair"
                android:textColor="@color/black_light"
                android:textSize="@dimen/_15sdp" />


            <ImageView
                android:id="@+id/ivCross"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_cross" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlPic"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:layout_below="@+id/header"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@color/gray">

            <ImageView
                android:id="@+id/ivUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/ic_camera" />

            <TextView
                android:id="@+id/tvUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivUpload"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_5sdp"
                android:text="@string/upload_photo"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


            <ImageView
                android:id="@+id/ivPic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:visibility="gone" />

        </RelativeLayout>







        <RelativeLayout
            android:layout_below="@id/rlPic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_toLeftOf="@+id/tvTimer"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:padding="@dimen/_12sdp"
                android:text="@string/timer"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />


            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/rounded_black_bg"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:padding="@dimen/_10sdp"
                android:text="00:00"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />


        </RelativeLayout>



        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_40sdp"
            android:layout_centerInParent="true"
            >

            <RelativeLayout
                android:id="@+id/btnDone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_green">


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/done"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>



    </RelativeLayout>
</layout>