<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">



        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/rounded_black_200bg">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_centerInParent="true"
                android:padding="@dimen/_12sdp"
                android:text="@string/take_photo"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_14sdp"
                android:layout_toLeftOf="@+id/ivUserImg"/>




        </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlPic"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:layout_margin="@dimen/_20sdp"
        android:background="@color/gray">


        <ImageView
            android:id="@+id/ivPic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/llContent"
        android:layout_below="@+id/cardSpi"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="horizontal"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <ImageView
            android:id="@+id/ivShare"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/circle_black"
            android:src="@drawable/share"
            android:padding="@dimen/_10sdp"
            android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_below="@+id/ivShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/_2sdp"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivEdit"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/circle_black"
                android:src="@drawable/edit"
                android:padding="@dimen/_10sdp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_below="@+id/ivEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/_2sdp"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlDelete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/circle_black"
                android:src="@drawable/delete"
                android:padding="@dimen/_10sdp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_below="@+id/ivDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/_2sdp"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </LinearLayout>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardSpi"
        android:layout_below="@+id/rlPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:padding="@dimen/_10sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <Spinner
                android:id="@+id/spinnerDefact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown"
                />

        </RelativeLayout>




    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_below="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        android:elevation="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow_button">


            <TextView
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                android:text="@string/save"
                android:gravity="center"
                android:textAllCaps="true"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"/>

        </RelativeLayout>




    </androidx.cardview.widget.CardView>


</RelativeLayout>
    </ScrollView>
</layout>